syntax = "proto3";

// each class is defined in each own file, inside a common package
option java_multiple_files = true;
option java_package = "primesservice";

package primesservice; // package do proto

// The greeting service definition.
service PrimesService {
    rpc findPrimes (NumOfPrimes) returns (stream Prime);
    rpc addNumbers (stream Number) returns (SumResult);
    rpc addNumbersCont (stream OperationRequest) returns (stream OperationReply);
    rpc findPrimesInterval (PrimesInterval) returns (stream Prime);
}

// input message
message NumOfPrimes {
    int32 numOfPrimes = 1;
    int32 startNum = 2;
}

// output message
message Prime {
    int32 prime = 1;
}

message SumResult {
    int32 sumResult = 1;
}

message Number {
    int32 number = 1;
}

message OperationRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message OperationReply {
    int32 res = 1;
}

message PrimesInterval {
    int32 start = 1;
    int32 end = 2;
}